--- a/src/components/Middlepage/Middlepage.module.css
+++ b/src/components/Middlepage/Middlepage.module.css
@@ -199,3 +199,19 @@
     color: #fff;
     transition: .8s;
 }
+
+.loader {
+    border: 4px solid #ddd;
+    border-top: 4px solid #3498db;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin: 50px auto;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
