--- a/src/components/Pagethree/Pagethree.module.css
+++ b/src/components/Pagethree/Pagethree.module.css
@@ -45,7 +45,7 @@
     display: flex;
     justify-content: space-evenly;
     justify-items: center;
-     margin-left:50px;
+    margin-left:50px;
 }
 .desc p {
     width: 202px;
@@ -61,21 +61,21 @@ article {
   width: 100%;
   overflow: hidden;
   position: relative;
-  height: 150px; /* اضبطه حسب حجم صورك */
+  height: 150px; 
 }
 
 .slide_track {
     margin-top: 100px;
   display: flex;
-  width: calc(200px * 8); /* عرض صورة × عدد الصور */
+  width: calc(200px * 8); 
   animation: scroll 20s linear infinite;
   justify-content: space-between;
   height: 1000px;
 }
 
 .slide_track img {
-  width: 200px;
-  height: 60px;
+  width: 100px;
+  height: 30px;
   margin-right: 20px;
 }
 
